--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         𝘽𝙞𝙣1个人主页
     </title>
     <meta name="keywords" content="个人主页、交流社区、QQ群、QQ频道、破解软件、telegram、导航">
-    <meta name="description" content="𝘽𝙞𝙣1の个人主页 - 一个永不失联的个人社群导航网站。">
+    <meta name="description" content="bin1の个人主页 - 一个永不失联的个人社群导航网站。">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/opposans" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
@@ -388,7 +388,7 @@
             </div>
             <!--底部文本开始-->
             <div class="foot">
-                ©𝘽𝙞𝙣1. 2024 . 𝘼𝙡𝙡 𝙍𝙞𝙜𝙝𝙩𝙨 𝙍𝙚𝙨𝙚𝙧𝙫𝙚𝙙
+                ©bin1. 2024 . All Rights Reserved
             </div>
             <!--底部文本结束-->
         </div>
