--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                     </p>
                                     </p>
                                     <p class="p2">
-                                        Android破解软件、Windows破解软件、Windows密钥、Office秘钥、软件序列号、学习教程课程、tvbox自建源300+站点。
+                                        Android破解软件、Windows破解软件、Windows密钥、Office秘钥、软件序列号、学习教程课程。
                                     </p>
                                     </p>
                                     <p class="p2" style="color:rgb(6, 227, 113);">
