--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     <!--代码分割线-->
                     </p>
                     <span class="p1span2"><b>
-                            <font color=white>这是一个交流社群导航网站，为了避免失联，建议收藏！原网站 https://bin1site.github.io 已弃用！！！</font>
+                            <font color=white>为了避免失联，建议收藏！原域名 https://bin1site.github.io 已弃用！！！</font>
                         </b></span>
                     <div class="top-line nomp"></div>
                     <!--代码分割线-->
