--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </div>
             <!--底部文本开始-->
             <div class="foot">
-                ©bin1. 2024 . All Rights Reserved
+                ©bin1. 2023-2024 . All Rights Reserved
             </div>
             <!--底部文本结束-->
         </div>
