--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
                             <font color=white>为了避免失联，建议收藏！原域名 bin1site.github.io 已弃用！！！</font>
                         </b></span>
                     <div class="top-line nomp"></div>
+                    <iframe src="https://pan.huang1111.cn/s/VbKnId" width="100%" height="500" ></iframe>
                     <!--代码分割线-->
                 </div>
                 <!--第二板块结束-->
