--- a/index.html
+++ b/index.html
@@ -384,7 +384,12 @@
                             <font color=white>为了避免失联，建议收藏！原域名 bin1site.github.io 已弃用！！！</font>
                         </b></span>
                     <div class="top-line nomp"></div>
+                    </p></p>
+                    <font color=white>@bin1 提示：限时资源，双击或者点击资源后右上角下载按钮下载，可左右上下滑动查看！！！</font>
+                    </p>
+                    </p>
                     <iframe src="https://pan.huang1111.cn/s/VbKnId" width="100%" height="500" ></iframe>
+                    </p>
                     <!--代码分割线-->
                 </div>
                 <!--第二板块结束-->
