--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <!--代码分割线-->
 
                         <div class="panel-box">
-                            
+
 
                             <!--代码分割线-->
                             <div class="row">
@@ -379,16 +379,28 @@
                         <!--代码分割线-->
                     </div>
                     <!--代码分割线-->
+
+                    <div class="title-info">
+                        <div class="title-i">
+                            <img class="" src="img/文件夹.png"
+                                style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
+                        </div>
+                        <div class="title-t">
+                            <b class="rainbow-text"> 限时资源</b>
+                        </div>
+                    </div>
+                    </p>
+                    <font color=white> <h5>提示：双击下载或点击资源后右上角下载按钮下载，可左右/上下滑动查看！！！</h5></font>
+                    </p>
+                    </p>
+                    <iframe src="https://pan.huang1111.cn/s/VbKnId" width="100%" height="500"></iframe>
+                    </p>
+                    <!--代码分割线-->
                     </p>
                     <span class="p1span2"><b>
-                            <font color=white>为了避免失联，建议收藏！原域名 bin1site.github.io 已弃用！！！</font>
+                            <font color=white>为了避免失联，建议加入QQ频道并收藏本页面！！</font>
                         </b></span>
                     <div class="top-line nomp"></div>
-                    </p></p>
-                    <font color=white>@bin1 提示：限时资源，双击或者点击资源后右上角下载按钮下载，可左右上下滑动查看！！！</font>
-                    </p>
-                    </p>
-                    <iframe src="https://pan.huang1111.cn/s/VbKnId" width="100%" height="500" ></iframe>
                     </p>
                     <!--代码分割线-->
                 </div>
