--- a/index.html
+++ b/index.html
@@ -390,10 +390,13 @@
                         </div>
                     </div>
                     </p>
-                    <font color=white> <h5>提示：双击下载或点击资源后右上角下载按钮下载，可左右/上下滑动查看！！！</h5></font>
+                    <font color=white>
+                        <h5>提示：双击下载或点击资源后右上角下载按钮下载，可左右/上下滑动查看！！！</h5>
+                    </font>
                     </p>
                     </p>
-                    <iframe class="panel-box" class="row" src="https://pan.huang1111.cn/s/VbKnId" width="100%" height="500"></iframe>
+                    <iframe class="panel-box" class="row" src="https://pan.huang1111.cn/s/VbKnId" width="100%"
+                        height="500"></iframe>
                     </p>
                     <!--代码分割线-->
                     </p>
