--- a/index.html
+++ b/index.html
@@ -389,16 +389,18 @@
                             <b class="rainbow-text"> 限时资源</b>
                         </div>
                     </div>
+
+                    <!--代码分割线-->
                     </p>
                     <font color=white>
                         <h5>提示：双击下载或点击资源后右上角下载按钮下载，可左右/上下滑动查看！！！</h5>
                     </font>
                     </p>
                     </p>
-                    <iframe class="panel-box" class="row"
-                        src="https://pan.shangui.cc/f/1mM2Tw/35%E6%AC%BE%E5%AE%89%E5%8D%93%E5%B7%A5%E5%85%B7.txt"
-                        width="100%" height="500"></iframe>
+                    <iframe class="panel-box" class="row" src="文档.txt" width="100%" height="500"></iframe>
                     </p>
+                    <!--代码分割线-->
+
                     <!--代码分割线-->
                     </p>
                     <span class="p1span2"><b>
