--- a/index.html
+++ b/index.html
@@ -393,11 +393,11 @@
                     <!--代码分割线-->
                     </p>
                     <font color=white>
-                        <h5>提示：双击下载或点击资源后右上角下载按钮下载，可左右/上下滑动查看！！！</h5>
+                        <h5>提示：可上/下滑动查看内容！！！</h5>
                     </font>
                     </p>
                     </p>
-                    <iframe class="panel-box" class="row" src="文档.txt" width="100%" height="500"></iframe>
+                    <iframe class="txt-box" class="row" src="文档.txt" width="100%" height="500"></iframe>
                     </p>
                     <!--代码分割线-->
 
