--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                         style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
                                     QQ资源群
                                     <span class="p1span">
-                                        火热聊天~
+                                        火热聊天中~
                                     </span>
                                 </p>
                                 <p class="p2">
