--- a/index.html
+++ b/index.html
@@ -392,12 +392,7 @@
 
                     <!--代码分割线-->
                     </p>
-                    <font color=white>
-                        <h5>提示：可上/下滑动查看内容！！！</h5>
-                    </font>
-                    </p>
-                    </p>
-                    <iframe class="txt-box" class="row" src="文档.txt" width="100%" height="500"></iframe>
+                    <iframe class="txt-box" class="row" src="https://www.zybuluo.com/bin1site/note/2553199" width="100%" height="500"></iframe>
                     </p>
                     <!--代码分割线-->
 
