--- a/index.html
+++ b/index.html
@@ -389,17 +389,18 @@
                             <b class="rainbow-text"> 限时资源</b>
                         </div>
                     </div>
-                                <div class="text">
-                                    <p class="p1">
-                                        ✅限时免费资源分享，随时更改或删除，可上下/左右滑动浏览 ~~
-                                        </p>
-                                    <p class="p1">
-                                        ✅手机端无法打开可修改浏览器UA为桌面模式，或PC端浏览器下载 。
-                                    </p>
-                                </div>
+                    <div class="text">
+                        <p class="p1">
+                            ✅限时免费资源分享，随时更改或删除，可上下/左右滑动浏览 ~~
+                        </p>
+                        <p class="p1">
+                            ✅手机端无法打开可修改浏览器UA为桌面模式，或PC端浏览器下载 。
+                        </p>
+                    </div>
                     <!--代码分割线-->
                     </p>
-                    <iframe class="txt-box" class="row" src="文档.json" width="100%" height="500"></iframe>
+                    <iframe class="txt-box" class="row" src="https://gobanfans.lanzoub.com/u/奈何独笑长亭" width="100%"
+                        height="500"></iframe>
                     </p>
                     <!--代码分割线-->
 
