--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
 
                         <div class="title-info">
                             <div class="title-i">
-                                <img class="" src="img/vip.png"
+                                <img class="" src="img/email.png"
                                     style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
                             </div>
                             <div class="title-t">
                                 <b class="rainbow-text">
-                                    高级成员[赞助]
+                                    联系反馈
                                 </b>
                             </div>
                         </div>
@@ -346,24 +346,10 @@
                                     </p>
                                 </div>
                             </div>
+                            <!--代码分割线-->
+                            <div class="top-line nomp"></div>
 
                             <!--代码分割线-->
-
-                        </div>
-                        <!--代码分割线-->
-
-                        <!--代码分割线-->
-
-                        <div class="title-info">
-                            <div class="title-i">
-                                <img class="" src="img/email.png"
-                                    style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
-                            </div>
-                            <div class="title-t">
-                                <b class="rainbow-text"> 联系反馈</b>
-                            </div>
-                        </div>
-                        <div class="panel-box">
                             <div class="row">
                                 <div class="text">
                                     </p>
@@ -375,8 +361,10 @@
                                     发送邮件
                                 </a>
                             </div>
+                            <!--代码分割线-->
                         </div>
                         <!--代码分割线-->
+
                     </div>
                     <!--代码分割线-->
 
