--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                     破解软件资源分享
                                 </p>
                             </div>
-                            <a href="https://qm.qq.com/q/hyUkBVsIog" target="_blank" class="btn-down">
+                            <a href="https://qm.qq.com/q/GjtNbiZQcK" target="_blank" class="btn-down">
                                 加入
                             </a>
                         </div>
