--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
                             </div>
                             <div class="title-t">
-                                <b class="rainbow-text">功能下载</b>
+                                <b class="rainbow-text">特色功能</b>
                             </div>
                         </div>
                         <!--代码分割线-->
@@ -299,13 +299,13 @@
                                 <div class="text">
                                     <p class="p1"><img alt="" src="img/windows.png"
                                             style="margin: 0 auto; border-radius: 0%; width: 25px; height: 25px;">
-                                        Win&Office激活
+                                        Windows&Office激活
                                         <span class="p2span">
                                             KMS
                                         </span>
                                     </p>
                                     <p class="p2">
-                                        一键KMS激活Win系统和office
+                                        一键KMS激活Windows和office
                                     </p>
                                 </div>
                                 <a href="javascript:;" onclick="window.open('./KMS/index.html', '_blank');"
@@ -382,7 +382,7 @@
                     </div>
                     <!--代码分割线-->
                     </p>
-                    <iframe class="txt-box" class="row" src="https://gobanfans.lanzoub.com/u/奈何独笑长亭" width="100%"
+                    <iframe class="txt-box" class="row" src="限时资源.json" width="100%"
                         height="700"></iframe>
                     </p>
                     <!--代码分割线-->
