--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
                                     </p>
                                     </p>
                                     <p class="p2">
-                                        Android破解软件、Windows破解软件、Windows密钥、Office秘钥、软件序列号、学习教程课程。
+                                        【高级赞助】Android破解软件、Windows破解软件、Windows密钥、Office秘钥、软件序列号、学习教程课程。
                                     </p>
                                     </p>
                                     <p class="p2" style="color:rgb(6, 227, 113);">
-                                        —— 联系群主付费加入
+                                        —— 已经关闭赞助，优质资源赞助者优享！
                                     </p>
                                     </p>
                                 </div>
