--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     </div>
                     <!--代码分割线-->
                     </p>
-                    <iframe class="txt-box" class="row" src="限时资源.json" width="100%"
+                    <iframe class="txt-box" class="row" src="文档.json" width="100%"
                         height="700"></iframe>
                     </p>
                     <!--代码分割线-->
