--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/头像.png">
     <title>
-        bin1个人主页
+        🪪bin1个人主页
     </title>
     <meta name="keywords" content="个人主页、交流社区、QQ群、QQ频道、破解软件、telegram、导航">
     <meta name="description" content="bin1の个人主页 - 一个永不失联的个人社群导航网站。">
