--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
     <link href="css/index.css" rel="stylesheet">
     <script src="js/clipboard.min.js"></script>
     <!--代码分割线-->
-
     <title>密码验证复制链接</title>
     <script>
         function 高级订阅() {
             var password = prompt("🍭🍭🍭请输入正确的高级会员密码：");
-
             if (password === "1111xxxx") {
                 var text = "https://pd.qq.com/s/1oqtpdvbd";
                 navigator.clipboard.writeText(text);
@@ -179,7 +177,6 @@
         }
     </style>
     <!--代码分割线-->
-
 </head>
 
 <body>
@@ -187,7 +184,6 @@
         <div class="page-mark">
         </div>
         <div class="page-center">
-
             <div class="header">
                 <img alt="Your Image" src="img/头像.png" onclick="location.reload();"
                     style="margin: 0 auto; border-radius: 50%; width: 100px; height: 100px;">
@@ -221,7 +217,7 @@
                                         style="margin: 0 auto; border-radius: 50%; width: 25px; height: 25px;">
                                     QQ资源群
                                     <span class="p1span">
-                                        火热聊天中~
+                                        正在火热聊天~
                                     </span>
                                 </p>
                                 <p class="p2">
@@ -232,7 +228,6 @@
                                 加入
                             </a>
                         </div>
-
                         <div class="top-line nomp"></div>
                         <!--代码分割线-->
                         <div class="row">
@@ -253,7 +248,6 @@
                             </a>
                         </div>
                         <!--代码分割线-->
-
                     </div>
                     <!--第一板块结束-->
                     <!--第二板块开始-->
@@ -268,9 +262,7 @@
                             </div>
                         </div>
                         <!--代码分割线-->
-
                         <div class="panel-box">
-
                             <!--代码分割线-->
                             <div class="row">
                                 <div class="text">
@@ -293,7 +285,6 @@
                             </div>
                             <!--代码分割线-->
                             <div class="top-line nomp"></div>
-
                             <!--代码分割线-->
                             <div class="row">
                                 <div class="text">
@@ -317,7 +308,6 @@
                             <!--代码分割线-->
                         </div>
                         <!--代码分割线-->
-
                         <div class="title-info">
                             <div class="title-i">
                                 <img class="" src="img/email.png"
@@ -335,7 +325,7 @@
                                     </p>
                                     </p>
                                     <p class="p2">
-                                        【高级赞助】Android破解软件、Windows破解软件、Windows密钥、Office秘钥、软件序列号、学习教程课程。
+                                        【高级赞助】Android破解软件、Windows破解软件、Windows密钥、Office密钥、软件序列号、学习教程课程。
                                     </p>
                                     </p>
                                     <p class="p2" style="color:rgb(6, 227, 113);">
@@ -346,7 +336,6 @@
                             </div>
                             <!--代码分割线-->
                             <div class="top-line nomp"></div>
-
                             <!--代码分割线-->
                             <div class="row">
                                 <div class="text">
@@ -362,10 +351,8 @@
                             <!--代码分割线-->
                         </div>
                         <!--代码分割线-->
-
                     </div>
                     <!--代码分割线-->
-
                     <div class="title-info">
                         <div class="title-i">
                             <img class="" src="img/文件夹.png"
@@ -382,11 +369,9 @@
                     </div>
                     <!--代码分割线-->
                     </p>
-                    <iframe class="txt-box" class="row" src="文档.json" width="100%"
-                        height="700"></iframe>
+                    <iframe class="txt-box" class="row" src="文档.json" width="100%" height="700"></iframe>
                     </p>
                     <!--代码分割线-->
-
                     <!--代码分割线-->
                     </p>
                     <span class="p1span2"><b>
@@ -404,7 +389,6 @@
             </div>
             <!--底部文本结束-->
         </div>
-
     </div>
     <!--代码分割线-->
     </div>
