--- a/tvbox/index.html
+++ b/tvbox/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>TVBox订阅源接口展示</title>
+	<title>🪪TVBox订阅源接口展示</title>
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta charset="utf-8">
