--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="wrapper">
 		<div class="profile-card js-profile-card">
 			<div class="profile-card__img">
-				<img src="logo.jpg" alt="profile card">
+				<img src="image/logo.jpg" alt="profile card">
 			</div>
 			<div class="profile-card__cnt js-profile-cnt">
 				<div class="profile-card__name">bin1site1.github.io</div>
