--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 					</button>
 				</div>
 				<p></p>
+				<!--文本开始-->
+				<div class="liuliangka" onclick="window.location.href='https://ym.ksjhaoka.com/?s=0tToasKQ98111'">
+					<b><u>🚀大流量卡：正规不虚标、官方发货app可查🚀</u></b>
+				</div>
+				<!--文本结束-->
+				<p></p>
 				<span class="profile-card__txt">
 					【高级赞助】
 				</span>
