--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<p></p>
 				<!--文本开始-->
 				<div class="liuliangka" onclick="window.location.href='https://ym.ksjhaoka.com/?s=0tToasKQ98111'">
-					<b><u>🚀大流量卡：正规不虚标、官方发货app可查🚀</u></b>
+					<b><u>🚀大流量卡：正规不虚标、官方app可查🚀</u></b>
 				</div>
 				<!--文本结束-->
 				<p></p>
