--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 				<!--文本开始-->
 				<div class="liuliangka" onclick="window.location.href='https://ym.ksjhaoka.com/?s=0tToasKQ98111'">
 					<b><u>🚀大流量卡：正规不虚标、官方app可查🚀</u></b>
+
 				</div>
+				<span class="profile-card__txt">
+					👆👆免费办理，包邮到家👆👆
+				</span>
 				<!--文本结束-->
 				<p></p>
 				<span class="profile-card__txt">
