--- a/index.html
+++ b/index.html
@@ -505,18 +505,21 @@
 						class="profile-card__button button--green">
 						关注QQ频道
 					</button>
+					<button href="javascript:;"
+						onclick="window.location.href='https://qm.qq.com/q/Ru91TWoVaK'"
+						class="profile-card__button button--blue">
+						交流QQ群
+					</button>
 					<button href="javascript:;" onclick="window.location.href='mailto:3295532395@qq.com'"
 						class="profile-card__button button--orange">
 						联系E-Mail
 					</button>
-					<button href="javascript:;"
-						onclick="window.location.href='https://ym.ksjhaoka.com/?s=0tToasKQ98111'"
-						class="profile-card__button button--blue">
-						官方大流量卡
-					</button>
 				</div>
 				<p></p>
 				<!--代码分割线-->
+				<span class="profile-card__txt">
+					<a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111"><b><u>低价大流量卡、正规号卡、官方可查！</u></b></a>
+				</span>
 				<p></p>
 				<span class="profile-card__txt">
 					【高级赞助】
