--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 				<p></p>
 				<!--代码分割线-->
 				<div class="profile-card-loc">
-					<span class="profile-card-loc__txt">Android/Windows/Serial-Key</span>
+					<span class="profile-card-loc__txt">Android | Windows | Other</span>
 				</div>
 				<!--代码分割线-->
 				<div class="profile-card-inf">
@@ -526,8 +526,9 @@
 				</span>
 				<p></p>
 				<span class="profile-card__txt">
-					【高级赞助】
+					<b><u>【高级赞助】</b></u>
 				</span>
+				<p></p>
 				<div>
 					<span class="profile-card__txt">
 						Android破解软件、Windows破解软件、Windows密钥、Office密钥、软件序列号、学习教程课程。
@@ -540,14 +541,13 @@
 						<p></p>
 						<a>友情提示：为了防止失联，建议收藏保存。</a>
 					</div>
-					<p></p>
-					<!--代码分割线-->
-					<div class="foot">
-						©bin1. 2023-2024 . All Rights Reserved
-					</div>
-					<!--代码分割线-->
 				</div>
 			</div>
+			<!--代码分割线-->
+			<div class="foot">
+						©bin1. 2023-2024 . All Rights Reserved
+			</div>
+			<!--代码分割线-->
 		</div>
 	</div>
 </body>
