--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>🪪bin个人社群导航</title>
+	<title>🪪bin皮燕子导航</title>
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<style>
@@ -472,7 +472,7 @@
 					alt="profile card">
 			</div>
 			<div class="profile-card__cnt js-profile-cnt">
-				<div class="profile-card__name">bin1site1.github.io</div>
+				<div class="profile-card__name">@bin1</div>
 				<div class="profile-card__txt">世味年来薄似纱，谁令骑马客京华？</div>
 				<p></p>
 				<!--代码分割线-->
