--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<div class="wrapper">
 		<div class="profile-card js-profile-card">
 			<div class="profile-card__img">
-				<img src="logo.jpg"
-					alt="profile card">
+				<img src="logo.jpg" alt="profile card">
 			</div>
 			<div class="profile-card__cnt js-profile-cnt">
 				<div class="profile-card__name">@bin1</div>
@@ -50,8 +49,7 @@
 						class="profile-card__button button--green">
 						关注QQ频道
 					</button>
-					<button href="javascript:;"
-						onclick="window.location.href='https://qm.qq.com/q/Ru91TWoVaK'"
+					<button href="javascript:;" onclick="window.location.href='https://qm.qq.com/q/Ru91TWoVaK'"
 						class="profile-card__button button--blue">
 						交流QQ群
 					</button>
@@ -89,7 +87,7 @@
 			</div>
 			<!--代码分割线-->
 			<div class="foot">
-			©bin1. 2023-2024 . All Rights Reserved
+				©bin1. 2023-2024 . All Rights Reserved
 			</div>
 			<!--代码分割线-->
 		</div>
