--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="wrapper">
 		<div class="profile-card js-profile-card">
 			<div class="profile-card__img">
-				<img src="logo.jpg" alt="profile card">
+				<img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="profile card">
 			</div>
 			<!--代码分割线-->
 			<div class="profile-card__cnt js-profile-cnt">
