--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>🪪bin皮燕子导航</title>
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta charset="utf-8">
+	<title>bin1皮燕子导航</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="profile-card js-profile-card">
-			<div class="profile-card__img">
-				<img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="profile card">
-			</div>
-			<!--代码分割线-->
-			<div class="profile-card__cnt js-profile-cnt">
-				<div class="profile-card__name">@bin1</div>
-				<div class="profile-card__txt">世味年来薄似纱，谁令骑马客京华？</div>
-				<p></p>
-				<!--代码分割线-->
-				<div class="profile-card-loc">
-					<span class="profile-card-loc__txt">Android | Windows | Other</span>
-				</div>
+	<div class="release">
+		<div class="release-body">
+			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航"></div>
+			<div class="title">
+				<h2>@bin1</h2>
+				<p>世味年来薄似纱，谁令骑马客京华？
+					<br>
+					<br>
+					<b>Android | Windows | Other</b>
+				</p>
 				<!--代码分割线-->
 				<div class="profile-card-inf">
 					<div class="profile-card-inf__item">
@@ -47,59 +41,44 @@
 					</div>
 				</div>
 				<!--代码分割线-->
-				<p></p>
-				<div class="profile-card-ctr">
-					<button href="javascript:;" onclick="window.location.href='https://pd.qq.com/s/1oqtpdvbd'"
-						class="profile-card__button button--green">
-						关注QQ频道
-					</button>
-					<!--代码分割线-->
-					<button href="javascript:;" onclick="window.location.href='https://qm.qq.com/q/Ru91TWoVaK'"
-						class="profile-card__button button--blue">
-						交流QQ群
-					</button>
-					<!--代码分割线-->
-					<button href="javascript:;" onclick="window.location.href='mailto:3295532395@qq.com'"
-						class="profile-card__button button--orange">
-						联系E-Mail
-					</button>
+			</div>
+			<div class="release-main">
+				<div class="links">
+					<ul>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">关注QQ频道</a></li>
+						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank">联系Email</a></li>
+					</ul>
 				</div>
-				<p></p>
 				<!--代码分割线-->
-				<span class="profile-card__txt">
-					<a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111"><b><u>👻低价大流量卡、正规号卡、官方可查！👻</u></b></a>
-				</span>
-				<p></p>
-				<!--代码分割线-->
-				<span class="profile-card__txt">
-					👆👆免费办理、包邮到家！👆👆
-				</span>
-				<p></p>
-				<!--代码分割线-->
-				<span class="profile-card__txt">
-					<b><u>【高级赞助】</b></u>
-				</span>
-				<!--代码分割线-->
-				<div>
-					<span class="profile-card__txt">
+				<div class="tips">
+					<p>
+						<a style="color: rgb(250, 42, 42);"
+							href="https://ym.ksjhaoka.com/?s=0tToasKQ98111">👻正规低价大流量卡、官方app可查！👻
+						</a><br>
+					<h5>👆👆免费办理、包邮到家！👆👆</h5>
+					</p>
+					<p>
+						<b style="color: rgb(0, 153, 255);">
+							- 高级赞助 -
+						</b>
+						<br>
+					<h4>
 						Android破解软件、Windows破解软件、Windows密钥、Office密钥、软件序列号、学习教程课程。
-					</span>
-					<p></p>
-					<div>
-						<span class="profile-card__txt">
-							—— 已经关闭赞助，优质资源赞助者优享！
-						</span>
-						<p></p>
-						<a><b>友情提示：为了防止失联，建议收藏保存。</b></a>
-					</div>
+					</h4>
+					<br>
+					<h5>—— 赞助已经关闭，优质资源赞助者优享！</h5>
+					</p>
 				</div>
+				<!--代码分割线-->
 			</div>
-			<!--代码分割线-->
-			<div class="foot">
-				©bin1. 2023-2024 . All Rights Reserved
-			</div>
-			<!--代码分割线-->
 		</div>
+		<!--代码分割线-->
+		<footer>友情提示：为了防止失联，建议按住Ctrl+D收藏保存。
+			<br></br>
+			<b>©bin1. 2023-2024 . All Rights Reserved</b></br>
+		</footer>
+		<!--代码分割线-->
 	</div>
 </body>
 
