--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="release">
 		<div class="release-body">
-			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航"></div>
+			<div class="image"><img src="https://vip.helloimg.com/i/2024/06/21/66750f9556e4a.png" alt="bin1皮燕子导航" onclick="location.reload();"></div>
 			<div class="title">
 				<h2>@bin1</h2>
 				<p>世味年来薄似纱，谁令骑马客京华？
