--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>bin1皮燕子导航</title>
+	<title>🪪bin1皮燕子导航</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -47,9 +47,9 @@
 			<div class="release-main">
 				<div class="links">
 					<ul>
-						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">关注QQ频道</a></li>
-						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ交流群</a></li>
-						<li><a href="mailto:3295532395@qq.com" target="_blank">联系Email</a></li>
+						<li><a href="https://pd.qq.com/s/1oqtpdvbd" target="_blank">QQ频道</a></li>
+						<li><a href="https://qm.qq.com/q/Ru91TWoVaK" target="_blank">QQ群</a></li>
+						<li><a href="mailto:3295532395@qq.com" target="_blank">Email反馈</a></li>
 					</ul>
 				</div>
 				<!--代码分割线-->
