--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>🪪bin1皮燕子导航</title>
+	<title>🪪bin1·皮燕子·导航</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
